src/coralParser.cpp

// Generated from coral.g4 by ANTLR 4.13.2


#include "coralListener.h"

#include "coralParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CoralParserStaticData final {
  CoralParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CoralParserStaticData(const CoralParserStaticData&) = delete;
  CoralParserStaticData(CoralParserStaticData&&) = delete;
  CoralParserStaticData& operator=(const CoralParserStaticData&) = delete;
  CoralParserStaticData& operator=(CoralParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag coralParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<CoralParserStaticData> coralParserStaticData = nullptr;

void coralParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (coralParserStaticData != nullptr) {
    return;
  }
#else
  assert(coralParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CoralParserStaticData>(
    std::vector<std::string>{
      "command_first", "arg_first", "command_second", "arg_second", "loop", 
      "block", "statement", "ifStatement", "condition", "assignment", "expr", 
      "program"
    },
    std::vector<std::string>{
      "", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'*'", "'/'", "'+'", 
      "'-'", "", "", "", "'Let'", "'be'", "'if'", "'set_breakpoint'", "'From'", 
      "'Until'", "'by'", "'Rewind'", "','", "'('", "')'", "'{'", "'}'", 
      "", "'is'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "INTEGER", "FLOAT", "STRING", 
      "LET", "BE", "IF", "SET_BREAKPOINT", "FROM", "UNTIL", "BY", "REWIND", 
      "COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "WS", "IS", "ID"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  coralParserStaticData = std::move(staticData);
}

}

coralParser::coralParser(TokenStream *input) : coralParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

coralParser::coralParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  coralParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *coralParserStaticData->atn, coralParserStaticData->decisionToDFA, coralParserStaticData->sharedContextCache, options);
}

coralParser::~coralParser() {
  delete _interpreter;
}

const atn::ATN& coralParser::getATN() const {
  return *coralParserStaticData->atn;
}

std::string coralParser::getGrammarFileName() const {
  return "coral.g4";
}

const std::vector<std::string>& coralParser::getRuleNames() const {
  return coralParserStaticData->ruleNames;
}

const dfa::Vocabulary& coralParser::getVocabulary() const {
  return coralParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView coralParser::getSerializedATN() const {
  return coralParserStaticData->serializedATN;
}


//----------------- Command_firstContext ------------------------------------------------------------------

coralParser::Command_firstContext::Command_firstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::Command_firstContext::REWIND() {
  return getToken(coralParser::REWIND, 0);
}

tree::TerminalNode* coralParser::Command_firstContext::LPAREN() {
  return getToken(coralParser::LPAREN, 0);
}

coralParser::Arg_firstContext* coralParser::Command_firstContext::arg_first() {
  return getRuleContext<coralParser::Arg_firstContext>(0);
}

tree::TerminalNode* coralParser::Command_firstContext::RPAREN() {
  return getToken(coralParser::RPAREN, 0);
}


size_t coralParser::Command_firstContext::getRuleIndex() const {
  return coralParser::RuleCommand_first;
}

void coralParser::Command_firstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand_first(this);
}

void coralParser::Command_firstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand_first(this);
}

coralParser::Command_firstContext* coralParser::command_first() {
  Command_firstContext *_localctx = _tracker.createInstance<Command_firstContext>(_ctx, getState());
  enterRule(_localctx, 0, coralParser::RuleCommand_first);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    match(coralParser::REWIND);
    setState(25);
    match(coralParser::LPAREN);
    setState(26);
    arg_first();
    setState(27);
    match(coralParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Arg_firstContext ------------------------------------------------------------------

coralParser::Arg_firstContext::Arg_firstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::Arg_firstContext::STRING() {
  return getToken(coralParser::STRING, 0);
}

tree::TerminalNode* coralParser::Arg_firstContext::INTEGER() {
  return getToken(coralParser::INTEGER, 0);
}


size_t coralParser::Arg_firstContext::getRuleIndex() const {
  return coralParser::RuleArg_first;
}

void coralParser::Arg_firstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArg_first(this);
}

void coralParser::Arg_firstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArg_first(this);
}

coralParser::Arg_firstContext* coralParser::arg_first() {
  Arg_firstContext *_localctx = _tracker.createInstance<Arg_firstContext>(_ctx, getState());
  enterRule(_localctx, 2, coralParser::RuleArg_first);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    _la = _input->LA(1);
    if (!(_la == coralParser::INTEGER

    || _la == coralParser::STRING)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Command_secondContext ------------------------------------------------------------------

coralParser::Command_secondContext::Command_secondContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::Command_secondContext::SET_BREAKPOINT() {
  return getToken(coralParser::SET_BREAKPOINT, 0);
}

tree::TerminalNode* coralParser::Command_secondContext::LPAREN() {
  return getToken(coralParser::LPAREN, 0);
}

coralParser::Arg_secondContext* coralParser::Command_secondContext::arg_second() {
  return getRuleContext<coralParser::Arg_secondContext>(0);
}

tree::TerminalNode* coralParser::Command_secondContext::RPAREN() {
  return getToken(coralParser::RPAREN, 0);
}


size_t coralParser::Command_secondContext::getRuleIndex() const {
  return coralParser::RuleCommand_second;
}

void coralParser::Command_secondContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand_second(this);
}

void coralParser::Command_secondContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand_second(this);
}

coralParser::Command_secondContext* coralParser::command_second() {
  Command_secondContext *_localctx = _tracker.createInstance<Command_secondContext>(_ctx, getState());
  enterRule(_localctx, 4, coralParser::RuleCommand_second);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    match(coralParser::SET_BREAKPOINT);
    setState(32);
    match(coralParser::LPAREN);
    setState(33);
    arg_second();
    setState(34);
    match(coralParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Arg_secondContext ------------------------------------------------------------------

coralParser::Arg_secondContext::Arg_secondContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::Arg_secondContext::STRING() {
  return getToken(coralParser::STRING, 0);
}


size_t coralParser::Arg_secondContext::getRuleIndex() const {
  return coralParser::RuleArg_second;
}

void coralParser::Arg_secondContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArg_second(this);
}

void coralParser::Arg_secondContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArg_second(this);
}

coralParser::Arg_secondContext* coralParser::arg_second() {
  Arg_secondContext *_localctx = _tracker.createInstance<Arg_secondContext>(_ctx, getState());
  enterRule(_localctx, 6, coralParser::RuleArg_second);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(coralParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopContext ------------------------------------------------------------------

coralParser::LoopContext::LoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::LoopContext::FROM() {
  return getToken(coralParser::FROM, 0);
}

std::vector<tree::TerminalNode *> coralParser::LoopContext::INTEGER() {
  return getTokens(coralParser::INTEGER);
}

tree::TerminalNode* coralParser::LoopContext::INTEGER(size_t i) {
  return getToken(coralParser::INTEGER, i);
}

tree::TerminalNode* coralParser::LoopContext::UNTIL() {
  return getToken(coralParser::UNTIL, 0);
}

tree::TerminalNode* coralParser::LoopContext::BY() {
  return getToken(coralParser::BY, 0);
}

tree::TerminalNode* coralParser::LoopContext::IS() {
  return getToken(coralParser::IS, 0);
}

coralParser::BlockContext* coralParser::LoopContext::block() {
  return getRuleContext<coralParser::BlockContext>(0);
}


size_t coralParser::LoopContext::getRuleIndex() const {
  return coralParser::RuleLoop;
}

void coralParser::LoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop(this);
}

void coralParser::LoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop(this);
}

coralParser::LoopContext* coralParser::loop() {
  LoopContext *_localctx = _tracker.createInstance<LoopContext>(_ctx, getState());
  enterRule(_localctx, 8, coralParser::RuleLoop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(coralParser::FROM);
    setState(39);
    match(coralParser::INTEGER);
    setState(40);
    match(coralParser::UNTIL);
    setState(41);
    match(coralParser::INTEGER);
    setState(42);
    match(coralParser::BY);
    setState(43);
    match(coralParser::INTEGER);
    setState(44);
    match(coralParser::IS);
    setState(45);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

coralParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::BlockContext::LBRACKET() {
  return getToken(coralParser::LBRACKET, 0);
}

tree::TerminalNode* coralParser::BlockContext::RBRACKET() {
  return getToken(coralParser::RBRACKET, 0);
}

std::vector<coralParser::StatementContext *> coralParser::BlockContext::statement() {
  return getRuleContexts<coralParser::StatementContext>();
}

coralParser::StatementContext* coralParser::BlockContext::statement(size_t i) {
  return getRuleContext<coralParser::StatementContext>(i);
}


size_t coralParser::BlockContext::getRuleIndex() const {
  return coralParser::RuleBlock;
}

void coralParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void coralParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

coralParser::BlockContext* coralParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 10, coralParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(coralParser::LBRACKET);
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2572288) != 0)) {
      setState(48);
      statement();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(54);
    match(coralParser::RBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

coralParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

coralParser::Command_firstContext* coralParser::StatementContext::command_first() {
  return getRuleContext<coralParser::Command_firstContext>(0);
}

coralParser::Command_secondContext* coralParser::StatementContext::command_second() {
  return getRuleContext<coralParser::Command_secondContext>(0);
}

coralParser::LoopContext* coralParser::StatementContext::loop() {
  return getRuleContext<coralParser::LoopContext>(0);
}

coralParser::IfStatementContext* coralParser::StatementContext::ifStatement() {
  return getRuleContext<coralParser::IfStatementContext>(0);
}

coralParser::AssignmentContext* coralParser::StatementContext::assignment() {
  return getRuleContext<coralParser::AssignmentContext>(0);
}


size_t coralParser::StatementContext::getRuleIndex() const {
  return coralParser::RuleStatement;
}

void coralParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void coralParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

coralParser::StatementContext* coralParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 12, coralParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case coralParser::REWIND: {
        enterOuterAlt(_localctx, 1);
        setState(56);
        command_first();
        break;
      }

      case coralParser::SET_BREAKPOINT: {
        enterOuterAlt(_localctx, 2);
        setState(57);
        command_second();
        break;
      }

      case coralParser::FROM: {
        enterOuterAlt(_localctx, 3);
        setState(58);
        loop();
        break;
      }

      case coralParser::IF: {
        enterOuterAlt(_localctx, 4);
        setState(59);
        ifStatement();
        break;
      }

      case coralParser::LET: {
        enterOuterAlt(_localctx, 5);
        setState(60);
        assignment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

coralParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::IfStatementContext::IF() {
  return getToken(coralParser::IF, 0);
}

coralParser::ConditionContext* coralParser::IfStatementContext::condition() {
  return getRuleContext<coralParser::ConditionContext>(0);
}

coralParser::BlockContext* coralParser::IfStatementContext::block() {
  return getRuleContext<coralParser::BlockContext>(0);
}


size_t coralParser::IfStatementContext::getRuleIndex() const {
  return coralParser::RuleIfStatement;
}

void coralParser::IfStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStatement(this);
}

void coralParser::IfStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStatement(this);
}

coralParser::IfStatementContext* coralParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, coralParser::RuleIfStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(coralParser::IF);
    setState(64);
    condition();
    setState(65);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionContext ------------------------------------------------------------------

coralParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<coralParser::ExprContext *> coralParser::ConditionContext::expr() {
  return getRuleContexts<coralParser::ExprContext>();
}

coralParser::ExprContext* coralParser::ConditionContext::expr(size_t i) {
  return getRuleContext<coralParser::ExprContext>(i);
}


size_t coralParser::ConditionContext::getRuleIndex() const {
  return coralParser::RuleCondition;
}

void coralParser::ConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition(this);
}

void coralParser::ConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition(this);
}

coralParser::ConditionContext* coralParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 16, coralParser::RuleCondition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    expr(0);
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 126) != 0)) {
      setState(68);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 126) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(69);
      expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

coralParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* coralParser::AssignmentContext::LET() {
  return getToken(coralParser::LET, 0);
}

tree::TerminalNode* coralParser::AssignmentContext::ID() {
  return getToken(coralParser::ID, 0);
}

tree::TerminalNode* coralParser::AssignmentContext::BE() {
  return getToken(coralParser::BE, 0);
}

coralParser::ExprContext* coralParser::AssignmentContext::expr() {
  return getRuleContext<coralParser::ExprContext>(0);
}


size_t coralParser::AssignmentContext::getRuleIndex() const {
  return coralParser::RuleAssignment;
}

void coralParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void coralParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}

coralParser::AssignmentContext* coralParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 18, coralParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(coralParser::LET);
    setState(73);
    match(coralParser::ID);
    setState(74);
    match(coralParser::BE);
    setState(75);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

coralParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t coralParser::ExprContext::getRuleIndex() const {
  return coralParser::RuleExpr;
}

void coralParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FloatContext ------------------------------------------------------------------

tree::TerminalNode* coralParser::FloatContext::FLOAT() {
  return getToken(coralParser::FLOAT, 0);
}

coralParser::FloatContext::FloatContext(ExprContext *ctx) { copyFrom(ctx); }

void coralParser::FloatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFloat(this);
}
void coralParser::FloatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFloat(this);
}
//----------------- MulDivContext ------------------------------------------------------------------

std::vector<coralParser::ExprContext *> coralParser::MulDivContext::expr() {
  return getRuleContexts<coralParser::ExprContext>();
}

coralParser::ExprContext* coralParser::MulDivContext::expr(size_t i) {
  return getRuleContext<coralParser::ExprContext>(i);
}

coralParser::MulDivContext::MulDivContext(ExprContext *ctx) { copyFrom(ctx); }

void coralParser::MulDivContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulDiv(this);
}
void coralParser::MulDivContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulDiv(this);
}
//----------------- AddSubContext ------------------------------------------------------------------

std::vector<coralParser::ExprContext *> coralParser::AddSubContext::expr() {
  return getRuleContexts<coralParser::ExprContext>();
}

coralParser::ExprContext* coralParser::AddSubContext::expr(size_t i) {
  return getRuleContext<coralParser::ExprContext>(i);
}

coralParser::AddSubContext::AddSubContext(ExprContext *ctx) { copyFrom(ctx); }

void coralParser::AddSubContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAddSub(this);
}
void coralParser::AddSubContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAddSub(this);
}
//----------------- ParensContext ------------------------------------------------------------------

tree::TerminalNode* coralParser::ParensContext::LPAREN() {
  return getToken(coralParser::LPAREN, 0);
}

coralParser::ExprContext* coralParser::ParensContext::expr() {
  return getRuleContext<coralParser::ExprContext>(0);
}

tree::TerminalNode* coralParser::ParensContext::RPAREN() {
  return getToken(coralParser::RPAREN, 0);
}

coralParser::ParensContext::ParensContext(ExprContext *ctx) { copyFrom(ctx); }

void coralParser::ParensContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParens(this);
}
void coralParser::ParensContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParens(this);
}
//----------------- ANOTHERVARIABLEContext ------------------------------------------------------------------

tree::TerminalNode* coralParser::ANOTHERVARIABLEContext::ID() {
  return getToken(coralParser::ID, 0);
}

coralParser::ANOTHERVARIABLEContext::ANOTHERVARIABLEContext(ExprContext *ctx) { copyFrom(ctx); }

void coralParser::ANOTHERVARIABLEContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterANOTHERVARIABLE(this);
}
void coralParser::ANOTHERVARIABLEContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitANOTHERVARIABLE(this);
}
//----------------- StringContext ------------------------------------------------------------------

tree::TerminalNode* coralParser::StringContext::STRING() {
  return getToken(coralParser::STRING, 0);
}

coralParser::StringContext::StringContext(ExprContext *ctx) { copyFrom(ctx); }

void coralParser::StringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterString(this);
}
void coralParser::StringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitString(this);
}
//----------------- IntContext ------------------------------------------------------------------

tree::TerminalNode* coralParser::IntContext::INTEGER() {
  return getToken(coralParser::INTEGER, 0);
}

coralParser::IntContext::IntContext(ExprContext *ctx) { copyFrom(ctx); }

void coralParser::IntContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt(this);
}
void coralParser::IntContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<coralListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt(this);
}

coralParser::ExprContext* coralParser::expr() {
   return expr(0);
}

coralParser::ExprContext* coralParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  coralParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  coralParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, coralParser::RuleExpr, precedence);

    size_t _la = 0;
